@startuml
' 抽象元素：帖子接口
interface PostElement {
  + accept(visitor: PostVisitor, userId: int): String
  + getId(): int
  + getLikeCount(): int
  + setLikeCount(count: int): void
  + getUserId(): int
}

' 具体元素：基础帖子类
class BasePost implements PostElement {
  - id: int
  - title: String
  - content: String
  - userId: int
  - likeCount: int
  - createTime: Date
  + BasePost(title: String, content: String, userId: int)
  + accept(visitor: PostVisitor, userId: int): String
  + getId(): int
  + getLikeCount(): int
  + setLikeCount(count: int): void
  + getUserId(): int
}

' 抽象访问者：帖子操作访问者接口
interface PostVisitor {
  + visit(post: BasePost, userId: int): String
}

' 具体访问者：点赞访问者
class LikeVisitor implements PostVisitor {
  - likeRecords: Map<String, Boolean>  // key: userId_postId, value: 是否点赞
  + LikeVisitor()
  + visit(post: BasePost, userId: int): String
  + hasLiked(userId: int, postId: int): boolean
}

' 辅助类：点赞记录管理
class LikeRecordManager {
  - static likeMap: Map<String, Boolean>
  + static isLiked(userId: int, postId: int): boolean
  + static setLikeStatus(userId: int, postId: int, status: boolean): void
}

' 通知服务（联动观察者模式）
class NotificationService {
  + sendLikeNotification(post: BasePost, userId: int): void
}

' 关系
BasePost --> LikeVisitor: 接受访问
LikeVisitor --> LikeRecordManager: 调用
LikeVisitor --> NotificationService: 调用
@enduml